add vat mapping

--- a/tests/samples/config/config_file_ok.ini
+++ b/tests/samples/config/config_file_ok.ini
@@ -2,3 +2,4 @@
 url = https://mywebsite.com
 apikey = ABCDEFGGIJKLMNOPQRSTUVWXYZ
 ebp_executable_path = /bin/python
+vat_mapping_file_path = tests/samples/vat.csv
