add payment method mapping with tests

--- a/tests/samples/config/config_file_ok.ini
+++ b/tests/samples/config/config_file_ok.ini
@@ -2,4 +2,5 @@
 url = https://mywebsite.com
 apikey = ABCDEFGGIJKLMNOPQRSTUVWXYZ
 ebp_executable_path = /bin/python
+payment_method_mapping_file_path = tests/samples/payment_method_mapping.csv
 vat_mapping_file_path = tests/samples/vat.csv
