--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,13 +7,12 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v4
-    - name: Set up Python 3.10
-      uses: actions/setup-python@v3
+
+    - name: Package Application
+      uses: JackMcKew/pyinstaller-action-windows@main
+
+    - uses: actions/upload-artifact@v4
       with:
-        python-version: 3.10
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-    - name: PyInstaller Windows
-      uses: JackMcKew/pyinstaller-action-windows@v0.1.2
+        name: name-of-artifact
+        path: src/dist/windows
 
