--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,8 +11,25 @@ jobs:
     - name: Package Application
       uses: JackMcKew/pyinstaller-action-windows@main
 
-    - uses: actions/upload-artifact@v4
+    - name: release
+      uses: actions/create-release@v1
+      id: create_release
       with:
-        name: name-of-artifact
-        path: src/dist/windows
+        draft: false
+        prerelease: false
+        release_name: PS EBP Connector ${{ github.ref }}
+        tag_name: ${{ github.ref }}
+        body: Release ${{ github.ref }}
+      env:
+        GITHUB_TOKEN: ${{ github.token }}
+
+    - name: upload windows artifact
+      uses: actions/upload-release-asset@v1
+      env:
+          GITHUB_TOKEN: ${{ github.token }}
+      with:
+        upload_url: ${{ steps.create_release.outputs.upload_url }}
+        asset_path: src/dist/windows/connector.exe
+        asset_name: ps_ebp_connector.exe
+        asset_content_type: application/exe
 
