--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -31,8 +31,13 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r src/requirements.txt
-          pip install -r src/requirements-dev.txt
+          pip install -r requirements.txt
+          pip install -r requirements-dev.txt
+          working-directory: ./src
+      - name: Install connector
+        run: |
+          pip install .
+        working-directory: ./src/psebpconnector
       - name: Test with pytest
         run: |
           pip install pytest
