--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -37,7 +37,7 @@ jobs:
       - name: Install connector
         run: |
           pip install .
-        working-directory: ./src/psebpconnector
+        working-directory: ./src
       - name: Test with pytest
         run: |
           pip install pytest
