--- a/tests/samples/config/config_file_ok.ini
+++ b/tests/samples/config/config_file_ok.ini
@@ -5,5 +5,5 @@ ebp_database_path = /dev/null
 ebp_executable_path = /bin/python
 payment_method_mapping_file_path = tests/samples/payment_method_mapping.csv
 vat_mapping_file_path = tests/samples/vat.csv
-working_directory = /home/user/foxchip/ebp_connector/workdir/
+working_directory = /tmp/
 order_valid_status = 2,4,5
