add: refunds support

--- a/tests/samples/config/config_file_ok.ini
+++ b/tests/samples/config/config_file_ok.ini
@@ -7,3 +7,4 @@ payment_method_mapping_file_path = tests/samples/payment_method_mapping.csv
 vat_mapping_file_path = tests/samples/vat.csv
 working_directory = /tmp/
 order_valid_status = 2,4,5
+order_refund_status = 7
